--- a/templates/index.html
+++ b/templates/index.html
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Adam</title>
-    <link rel="stylesheet" href="public/css/main.css">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}">
 </head>
+
 <body>
     <div id="content" />
-    <script src="public/dist/bundle.js" type="text/javascript"></script>
+    <script src="{{ url_for('static', filename='dist/bundle.js') }}" type="text/javascript"></script>
 </body>
+
 </html>
