--- a/public/css/navbar.css
+++ b/public/css/navbar.css
@@ -1,7 +1,11 @@
+:root {
+    --primary: #EC494B;
+}
+
 .navbar {
     height: 60px;
     display: flex;
-    background-color: #e33e42;
+    background-color: var(--primary);
     position: fixed;
     top: 0;
     width: 100%;
@@ -48,3 +52,18 @@
 .nav-item:hover > a span {
     color: darkslategrey;
 }
+
+/* @media (max-width: 750px) {
+    .nav-items {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100vw;
+        height: 100vh;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: space-around;
+        background-color: var(--primary);
+    }
+} */
