Worked on the home page and Instruction page. Instruction page needs more design

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -2,6 +2,8 @@
 @import url('./navbar.css');
 /* Homepage Stylesheet */
 @import url('./home.css');
+/* Instruction Page Stylesheet */
+@import url('./instruction.css');
 
 html {
  box-sizing: border-box;
