--- a/public/css/home.css
+++ b/public/css/home.css
@@ -1,3 +1,4 @@
+
 .home-banner {
     display: flex;
     height: 600px;
@@ -5,6 +6,7 @@
     margin-top: 100px;
     background-color: black;
 }
+
 .home-intro {
     width: 50%;
     display: flex;
@@ -30,7 +32,7 @@
 
 .home-image {
     width: 50%;
-    height: 600px;
+    height: 70%;
 }
 
 .my-face {
@@ -38,17 +40,77 @@
     background: url('../images/AdamJayne2.jpg') no-repeat;
     /* background-color: #e33e42; */
     background-position: top;
-    background-size: contain;
+    background-size: cover;
     background-clip: content-box;
     opacity: 90%;
+    /* padding: 15px; */
+    max-width: 500px;
 }
 
-@media (max-width: 320px) {
+/* .after-box {
+    display: none;
+} */
+
+
+@media (max-width: 500px) {
+
     .home-banner {
         flex-direction: column;
+        align-items: center;
+        justify-content: space-between;
+        height: 100vh;
+        margin: 0;
+        transform: none;
+        padding: 20px;
     }
-}
 
-.about-me {
-    margin-top: 50px;
+    .home-intro {
+        width: 100%;
+        height: 50%;
+    }
+
+    .home-image {
+        width: 100%;
+    }
+
+    .home-intro-textbox {
+        width: 100%;
+    }
+
+    .home-intro-textbox h1 {
+        font-size: 1.3em;
+        font-weight: 600;
+        color: #fff;
+        margin-bottom: 15px;
+    }
+
+    .my-face {
+        width: 100%;
+    }
+
+    .after-box {
+        height: 30px;
+    }
+
+    svg {
+        width: 100%;
+        height: 25px;
+        /* set height to pixels if you want angle to change with screen width */
+    }
+
+    .about-me {
+        padding: 30px;
+    }
+
+    .about-hr {
+        width: 110px;
+        text-align: left;
+        margin: 16px 0;
+    }
+
+    .about-content {
+        line-height: 1.5em;
+        font-size: 1.2em;
+    }
+    
 }
