--- a/public/css/instruction.css
+++ b/public/css/instruction.css
@@ -1,49 +1,23 @@
-
 :root {
     --primary: #EC494B;
 }
 
-.header {
-    width: 100%;
-    height: 120px;
-    background-color: #000;
-    display: flex;
-    align-content: center;
-    align-items: center;
-    padding: 0 16px;
-}
-
-.header-title {
-    color: #fff;
-    font-size: 1.8em;
-    font-weight: 600;
-}
-
-.after-header {
-    margin-top: -1px;
-}
-
-svg {
-    width: 100%;
-    height: 25px;
-    /* set height to pixels if you want angle to change with screen width */
-}
-
 .image-box {
     margin-top: -28px;
-    height: 400px;
+    height: 600px;
     width: 100%;
-    background-image: url('../images/me.png');
     background-repeat: no-repeat;
-    background-position: center;
+    background-position: center 30%;
     background-size: cover;
     z-index: -2;
 }
 
+.instruction-image {
+    background-image: url('../images/me.png');
+}
+
 .instruction-description {
-    position: relative;
     background-color: var(--primary);
-    padding: 16px;
 }
 
 .description-content {
@@ -51,29 +25,34 @@ svg {
     line-height: 1.4em;
     font-size: 1.2em;
     font-weight: 500;
+    padding: 30px;
 }
 
 .description-content p {
     margin-bottom: 16px;
 }
 
-.description-content p:last-child {
-    margin-bottom: 30px;
+#redAngle {
+    margin-top: 0px;
 }
 
 .feedback-section {
-    display: flex;
-    flex-direction: column;
-    align-content: space-around;
-    padding: 16px;
+    padding: 30px;
+    height: 300px;
 }
 
 .feedback-title {
-    
+}
+
+.feedback-reviews {
+    display: flex;
+    justify-content: space-between;
 }
 
 .feedback {
-    margin-top: 50px;
+    margin-top: 16px;
+    height: 60px;
+    width: 45%;
 }
 
 .feedback p {
@@ -86,4 +65,51 @@ svg {
     font-weight: 300;
     color: lightslategrey;
     float: right;
+}
+
+.instruction-experience {
+    padding: 30px;
+    height: 200px;
+}
+
+@media(max-width:815px) {
+    .header {
+        margin-top: 0;
+    }
+}
+
+@media (max-width: 800px) {
+    .feedback-section {
+        height: auto;
+    }
+    .feedback-reviews {
+        flex-direction: column;
+    }
+    .feedback {
+        width: 100%;
+        height: auto;
+    }
+
+    .feedback:last-child {
+        margin-top: 30px;
+    }
+
+    .instruction-experience p {
+        margin-bottom: 30px;
+    }
+}
+
+@media(max-width:500px) {
+    .image-box {
+        height: 400px;
+        background-size: 300%;
+    }
+
+    .feedback-reviews {
+        flex-direction: column;
+    }
+
+    .feedback p:last-child {
+        margin-top: 16px;
+    }
 }
