--- a/public/css/navbar.css
+++ b/public/css/navbar.css
@@ -129,6 +129,7 @@
         align-items: center;
         justify-content: space-around;
         z-index: 12;
+        box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     }
 
     .navbar-toggler-opened {
@@ -144,5 +145,6 @@
         background: #000;
         transition: 1s ease;
         z-index: 12;
+        box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     }
 }
